
name:                hminer
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Hashimoto
                     , Cache
                     , Constants
                     , Dataset
  other-modules:       Util
  build-depends:       base >=4.7 && <4.8,
                       arithmoi,
                       array,
                       binary,
                       bytestring,
                       cryptohash
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
  default-language:    Haskell2010


executable hminer
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       arithmoi,
                       array,
                       binary,
                       bytestring,
                       cryptohash,
                       hminer,
                       time
  ghc-options:         -Wall -O2
  hs-source-dirs:      exec_src
  default-language:    Haskell2010