
name:                miner-ethash
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Hashimoto
                     , Cache
                     , Constants
                     , Dataset
                     , TimeIt
                     , Util
  --other-modules:       Util
  build-depends:       base,
                       arithmoi,
                       array,
                       binary,
                       bytestring,
                       cryptohash,
                       time
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
  default-language:    Haskell2010


executable miner-ethash
  main-is:             Main.hs
  build-depends:       base,
                       arithmoi,
                       array,
                       binary,
                       bytestring,
                       cryptohash,
                       mmap,
                       miner-ethash,
                       time,
                       blockapps-util
  ghc-options:         -Wall -O2
  hs-source-dirs:      exec_src
  default-language:    Haskell2010

executable mkDataset
  main-is:             mkDataset.hs
  build-depends:       base,
                       arithmoi,
                       array,
                       binary,
                       bytestring,
                       cryptohash,
                       miner-ethash,
                       time,
                       blockapps-util
  ghc-options:         -Wall -O2
  hs-source-dirs:      exec_src
  default-language:    Haskell2010

Test-Suite test-ethash
    default-language: Haskell98
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test, src
    build-depends:      base >=4 && < 5
                    , bytestring
                    , base16-bytestring
                    , ansi-wl-pprint
                    , test-framework
                    , test-framework-hunit
                    , HUnit
                    , arithmoi
                    , array
                    , binary
                    , bytestring
                    , cryptohash
                    , time
                    , blockapps-util
